gradle config expansion